Code/syntax.output
Terminals which are not used

   LOWER_THAN_ELSE


State 77 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC DefList error

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | /* empty */

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp LB error SEMI
   37     | IF LP Exp RP error ELSE Stmt
   38     | LP Exp error SEMI
   39     | WHILE LP Exp RP error LC DefList StmtList RC
   40     | error SEMI

   41 DefList: Def DefList
   42        | /* empty */

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | ID LP error
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | error RP
   69    | LP error

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 22 27 36 37 38 39 40 44 62 68 69
INT (258) 19 66
FLOAT (259) 67
ID (260) 15 17 18 20 21 22 60 61 62 64 65
TYPE (261) 10
SEMI (262) 4 5 30 32 36 38 40 43 44
COMMA (263) 9 23 46 70
ASSIGNOP (264) 48 49
RELOP (265) 52
PLUS (266) 53
MINUS (267) 54 58
STAR (268) 55
DIV (269) 56
AND (270) 50
OR (271) 51
DOT (272) 64
NOT (273) 59
LP (274) 20 21 22 33 34 35 37 38 39 57 60 61 62 69
RP (275) 20 21 33 34 35 37 39 57 60 61 68
LB (276) 19 36 63
RB (277) 19 63
LC (278) 12 14 26 39
RC (279) 12 26 27 39
STRUCT (280) 12 13 14
RETURN (281) 32
IF (282) 33 34 37
ELSE (283) 34 37
WHILE (284) 35 39
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 25 43 44
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 14
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19, on right: 8 9 19 25 47 48
FunDec (41)
    on left: 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 26 28 39
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38 39 40, on right: 28 33 34 35
    37
DefList (47)
    on left: 41 42, on right: 12 14 26 39 41
Def (48)
    on left: 43 44, on right: 41
DecList (49)
    on left: 45 46, on right: 43 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69, on right: 30 32 33 34 35 36 37 38 39 48 49 50 51 52 53
    54 55 56 57 58 59 63 64 70 71
Args (52)
    on left: 70 71, on right: 60 70


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC DefList error

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC DefList error

    LC  shift, and go to state 19


state 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


state 14

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP error

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


state 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


state 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 24
    LC     shift, and go to state 25

    CompSt  go to state 26


state 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


state 20

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . error

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


state 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


state 23

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


state 24

   27 CompSt: error . RC

    RC  shift, and go to state 38


state 25

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 29


state 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 27

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


state 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC
   14                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 44
    RC     shift, and go to state 45


state 29

   41 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


state 30

   22 FunDec: ID LP error .

    $default  reduce using rule 22 (FunDec)


state 31

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 32

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 47


state 33

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


state 34

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 24 (VarList)


state 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 37

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


state 38

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


state 39

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 25
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


state 40

   44 Def: Specifier error . SEMI

    SEMI  shift, and go to state 65


state 41

   19 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 23

    $default  reduce using rule 47 (Dec)


state 42

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


state 43

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 45 (DecList)


state 44

   14 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 14 (StructSpecifier)


state 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 46

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


state 47

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


state 48

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 49

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 34


state 50

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 51

   27 CompSt: error . RC
   40 Stmt: error . SEMI
   68 Exp: error . RP

    SEMI  shift, and go to state 70
    RP    shift, and go to state 71
    RC    shift, and go to state 38


state 52

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 53

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 54

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   62    | ID . LP error
   65    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 65 (Exp)


state 55

   58 Exp: MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 75


state 56

   59 Exp: NOT . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 76


state 57

   38 Stmt: LP . Exp error SEMI
   57 Exp: LP . Exp RP
   69    | LP . error

    error  shift, and go to state 77
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 78


state 58

   32 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 79


state 59

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 80


state 60

   35 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP Exp RP error LC DefList StmtList RC

    LP  shift, and go to state 81


state 61

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


state 62

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


state 63

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 25
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 83
    Stmt      go to state 63
    Exp       go to state 64


state 64

   30 Stmt: Exp . SEMI
   36     | Exp . LB error SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


state 65

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


state 66

   48 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 95


state 67

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


state 68

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 96
    Dec      go to state 43


state 69

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 70

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


state 71

   68 Exp: error RP .

    $default  reduce using rule 68 (Exp)


state 72

   60 Exp: ID LP . Args RP
   61    | ID LP . RP
   62    | ID LP . error

    error  shift, and go to state 97
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


state 73

   68 Exp: error . RP

    RP  shift, and go to state 71


state 74

   57 Exp: LP . Exp RP
   69    | LP . error

    error  shift, and go to state 77
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 101


state 75

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 102

    $default  reduce using rule 58 (Exp)


state 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 102

    $default  reduce using rule 59 (Exp)


state 77

   68 Exp: error . RP
   69    | LP error .

    RP  shift, and go to state 71

    RP        [reduce using rule 69 (Exp)]
    $default  reduce using rule 69 (Exp)


state 78

   38 Stmt: LP Exp . error SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    error     shift, and go to state 103
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 104
    LB        shift, and go to state 102


state 79

   32 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 102


state 80

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP error ELSE Stmt

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 106


state 81

   35 Stmt: WHILE LP . Exp RP Stmt
   39     | WHILE LP . Exp RP error LC DefList StmtList RC

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 107


state 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 83

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 84

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


state 85

   49 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 108


state 86

   52 Exp: Exp RELOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 109


state 87

   53 Exp: Exp PLUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 110


state 88

   54 Exp: Exp MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 74

    Exp  go to state 111


state 89

   55 Exp: Exp STAR . Exp
